--- a/index.html
+++ b/index.html
@@ -1,35 +1,81 @@
 <html>
-<!-- Display the countdown timer in an element -->
-<p id="demo"></p>
+  <head>
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-52771679-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'UA-52771679-1');
+    </script>
 
-<script>
+    <title>Fortnite Cube Tracker</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
+
+    <!-- CSS -->
+    <link href="assets/css/modesta.css" type="text/css" rel="stylesheet"> <!-- uses ModestaCSS from https://github.com/AlexFlipnote/ModestaCSS -->
+
+    <!-- JavaScript -->
+    <script src="assets/js/smoothscroll.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="assets/js/jarallax.min.js" type="text/javascript" charset="utf-8"></script>
+    <script src="assets/js/main.js" type="text/javascript" charset="utf-8"></script>
+    <script>
+function wait(ms) {
+    var d = new Date();
+    var d2 = null;
+    do { d2 = new Date(); }
+    while(d2-d < ms);
+}
+ 
 // Set the date we're counting down to
-var countDownDate = new Date("Jan 5, 2019 15:37:25").getTime();
-
+ 
+var countDownDate = new Date("Sep 2, 2018 06:59:46 EDT")
+ 
+// Get todays date and time
+var now = new Date().getTime();
+      
+var minutes = 47
+var seconds = 30
+   
+// Find the distance between now and the count down date
+var distance = countDownDate.getTime() - now;
+while (distance < 0) {
+    countDownDate.setSeconds(countDownDate.getSeconds() + minutes*60+seconds)
+    console.log("TEST")
+ 
+    distance = countDownDate - now;
+}
+ 
 // Update the count down every 1 second
 var x = setInterval(function() {
-
-  // Get todays date and time
-  var now = new Date().getTime();
-
-  // Find the distance between now and the count down date
-  var distance = countDownDate - now;
-
-  // Time calculations for days, hours, minutes and seconds
-  var days = Math.floor(distance / (1000 * 60 * 60 * 24));
-  var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-  var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-  var seconds = Math.floor((distance % (1000 * 60)) / 1000);
-
-  // Display the result in the element with id="demo"
-  document.getElementById("demo").innerHTML = days + "d " + hours + "h "
-  + minutes + "m " + seconds + "s ";
-
-  // If the count down is finished, write some text 
-  if (distance < 0) {
-    clearInterval(x);
-    document.getElementById("demo").innerHTML = "EXPIRED";
-  }
+ 
+    // Get todays date and time
+    var now = new Date().getTime();
+   
+    // Find the distance between now and the count down date
+    var distance = countDownDate - now;
+   
+    // Time calculations for days, hours, minutes and seconds
+    var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+    var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+    var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+   
+    // Output the result in an element with id="demo"
+    document.getElementById("countdown").innerHTML = hours + "h "
+    + minutes + "m " + seconds + "s ";
+ 
+    console.log(distance)
+ 
+    if (distance < 0) {
+    document.getElementById("countdown").innerHTML = "Cube Time!";
+    }
+    if (distance < -19000) {
+    countDownDate.setSeconds(countDownDate.getSeconds() + minutes*60+seconds);
+    }
 }, 1000);
 </script>
+  </script>
+  </section>
+  </body>
 </html>
