--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
 
+    <!-- Meta Data -->
+    <meta name="theme-color" content="#98ff98">
+    <meta content="https://i.imgur.com/VH7Ieuf.png" property="og:image" />
+    <link rel="icon" type="image/x-icon" href="https://itsfiremonkey.github.io/assets/images/Countdown.gif">
+    <meta content="Cube Countdown" property="og:title" />
+
+    <meta content="Sud4nym's countdown website for the Fortnite Cube event!" property="og:description" />
+    <meta content="Sud4nym's countdown website for the Fortnite Cube event!" name="description" />
+
     <!-- CSS -->
     <link href="assets/css/modesta.css" type="text/css" rel="stylesheet"> <!-- uses ModestaCSS from https://github.com/AlexFlipnote/ModestaCSS -->
 
@@ -75,6 +84,47 @@ var x = setInterval(function() {
     }
 }, 1000);
 </script>
+
+    <!-- Custom CSS -->
+    <style>.one-full.column p, .one-full.column h1 { margin: 0; }</style>
+  </head>
+  <body>
+    <div class="fullscreen">
+      <div data-jarallax data-speed="0.25" class="jarallax background" style="background-image: url('assets/images/bg1.gif');"></div>
+      <script type="text/javascript">
+    var images = ['assets/images/down1.gif', 'assets/images/down2.gif', 'assets/images/down3.gif', 'assets/images/down4.gif', 'assets/images/down5.gif', 'assets/images/down6.gif', 'assets/images/down7.gif'];
+    document.getElementsByClassName('background')[0].style.backgroundImage = 'url(' + images[Math.floor(Math.random() * images.length)] + ')';
+  </script>
+      <div class="center-object">
+        <section class="me">
+          <h1 class="title" style="width: 100%;text-align: center">Cube Countdown!</h1>
+          <span class="undertitle" style="width: 100%;text-align: center" id="countdown"></span>
+        </section>
+        <div class="buttons">
+          <a href="https://twitter.com/Sud4nym" class="btn animation twitter hover" target="_blank">@Sud4nym</a>
+          <a href="https://twitter.com/SiloxLeaks" class="btn animation twitter hover" target="_blank">@SiloxLeaks</a>
+          <a href="https://twitter.com/FireMonkey_" class="btn animation twitter hover" target="_blank">@FireMonkey</a>
+          <a href="https://youtube.com/c/firemonkeyv2" class="btn animation youtube hover">My YouTube</a>
+        </div>
+      </div>
+              <a href="#information"><div id="fade" class="arrow bounce"></div></a>
+    </div>
+
+    <section class="container" id="information">
+      <div class="box-container primary row">
+        <div class="one-full column"><h1 style="width: 100%;text-align: center"><i class="twa twa-pencil2"></i> What Is This Cube?</h1></div>
+        <div class="one-full column">
+          <p>This Cube had spawned in on the 24th of August due to a lighting storm, It uses the power of the Hop Rocks to move around the map, making Hop Rock Magnetic Fields and leaving behind glyphs. This website is made to track the cubes movements!
+          </p>
+        </div>
+      </div>
+  
+        <div class="box-container primary row">
+        <div class="one-full column"><h1 style="width: 100%;text-align: center"><i class="twa twa-pencil2"></i>Current Cube Map</h1></div>
+        <div class="one-full column">
+          <a href="https://itsfiremonkey.github.io/assets/images/cubemap.png" target="_blank"><img src="/assets/images/cubemap.png" style='height: 100%; width: 100%; object-fit: contain; text-align: center'/></>
+        </div>
+      </div>
   </section>
   </body>
 </html>
