--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <!-- Meta Data -->
     <meta name="theme-color" content="#98ff98">
     <meta content="https://i.imgur.com/VH7Ieuf.png" property="og:image" />
-    <link rel="icon" type="image/x-icon" href="https://itsfiremonkey.github.io/assets/images/Countdown.gif">
+    <link rel="icon" type="image/x-icon" href="https://github.com/Afraid4Life/Afraid4Life.github.io/blob/master/pORFPMW4_400x400.jpg">
     <meta content="Cube Countdown" property="og:title" />
 
-    <meta content="Sud4nym's countdown website for the Fortnite Cube event!" property="og:description" />
-    <meta content="Sud4nym's countdown website for the Fortnite Cube event!" name="description" />
+    <meta content="" property="og:description" />
+    <meta content="" name="description" />
 
     <!-- CSS -->
     <link href="assets/css/modesta.css" type="text/css" rel="stylesheet"> <!-- uses ModestaCSS from https://github.com/AlexFlipnote/ModestaCSS -->
@@ -101,10 +101,10 @@ var x = setInterval(function() {
           <span class="undertitle" style="width: 100%;text-align: center" id="countdown"></span>
         </section>
         <div class="buttons">
-          <a href="https://twitter.com/Sud4nym" class="btn animation twitter hover" target="_blank">@Sud4nym</a>
-          <a href="https://twitter.com/SiloxLeaks" class="btn animation twitter hover" target="_blank">@SiloxLeaks</a>
-          <a href="https://twitter.com/FireMonkey_" class="btn animation twitter hover" target="_blank">@FireMonkey</a>
-          <a href="https://youtube.com/c/firemonkeyv2" class="btn animation youtube hover">My YouTube</a>
+          <a </a>
+          <a </a>
+          <a </a>
+          <a </a>
         </div>
       </div>
               <a href="#information"><div id="fade" class="arrow bounce"></div></a>
@@ -114,7 +114,7 @@ var x = setInterval(function() {
       <div class="box-container primary row">
         <div class="one-full column"><h1 style="width: 100%;text-align: center"><i class="twa twa-pencil2"></i> What Is This Cube?</h1></div>
         <div class="one-full column">
-          <p>This Cube had spawned in on the 24th of August due to a lighting storm, It uses the power of the Hop Rocks to move around the map, making Hop Rock Magnetic Fields and leaving behind glyphs. This website is made to track the cubes movements!
+          <p>
           </p>
         </div>
       </div>
