--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ var x = setInterval(function() {
     console.log(distance)
  
     if (distance < 0) {
-    document.getElementById("countdown").innerHTML = "Cube Time!";
+    document.getElementById("countdown").innerHTML = "Cube is now moving!";
     }
     if (distance < -19000) {
     countDownDate.setSeconds(countDownDate.getSeconds() + minutes*60+seconds);
@@ -112,7 +112,7 @@ var x = setInterval(function() {
 
     <section class="container" id="information">
       <div class="box-container primary row">
-        <div class="one-full column"><h1 style="width: 100%;text-align: center"><i class="twa twa-pencil2"></i> What Is This Cube?</h1></div>
+        <div class="one-full column"><h1 style="width: 100%;text-align: center"><i class="twa twa-pencil2"></i></h1></div>
         <div class="one-full column">
           <p>
           </p>
@@ -122,7 +122,7 @@ var x = setInterval(function() {
         <div class="box-container primary row">
         <div class="one-full column"><h1 style="width: 100%;text-align: center"><i class="twa twa-pencil2"></i>Current Cube Map</h1></div>
         <div class="one-full column">
-          <a href="https://itsfiremonkey.github.io/assets/images/cubemap.png" target="_blank"><img src="/assets/images/cubemap.png" style='height: 100%; width: 100%; object-fit: contain; text-align: center'/></>
+          <a href="https://github.com/Afraid4Life/Afraid4Life.github.io/blob/master/Map.png" target="_blank"><img src="/assets/images/cubemap.png" style='height: 100%; width: 100%; object-fit: contain; text-align: center'/></>
         </div>
       </div>
   </section>
