--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ var x = setInterval(function() {
         <div class="box-container primary row">
         <div class="one-full column"><h1 style="width: 100%;text-align: center"><i class="twa twa-pencil2"></i>Current Cube Map</h1></div>
         <div class="one-full column">
-          <a href="https://github.com/Afraid4Life/Afraid4Life.github.io/blob/master/Map.png" target="_blank"><img src="/assets/images/cubemap.png" style='height: 100%; width: 100%; object-fit: contain; text-align: center'/></>
+          <a href="https://github.com/Afraid4Life/Afraid4Life.github.io/blob/master/Map.png" target="_blank"><img src="/blob/master/Map.png" style='height: 100%; width: 100%; object-fit: contain; text-align: center'/></>
         </div>
       </div>
   </section>
