--- a/index.html
+++ b/index.html
@@ -92,12 +92,12 @@ var x = setInterval(function() {
     <div class="fullscreen">
       <div data-jarallax data-speed="0.25" class="jarallax background" style="background-image: url('assets/images/bg1.gif');"></div>
       <script type="text/javascript">
-    var images = ['assets/images/down1.gif', 'assets/images/down2.gif', 'assets/images/down3.gif', 'assets/images/down4.gif', 'assets/images/down5.gif', 'assets/images/down6.gif', 'assets/images/down7.gif'];
-    document.getElementsByClassName('background')[0].style.backgroundImage = 'url(' + images[Math.floor(Math.random() * images.length)] + ')';
+    var images = [''];
+    //document.getElementsByClassName('background')[0].style.backgroundImage = 'url(' + images[Math.floor(Math.random() * images.length)] + ')';
   </script>
       <div class="center-object">
         <section class="me">
-          <h1 class="title" style="width: 100%;text-align: center">Cube Countdown!</h1>
+          <h1 class="title" style="width: 100%;text-align: center">Time until cube moves:</h1>
           <span class="undertitle" style="width: 100%;text-align: center" id="countdown"></span>
         </section>
         <div class="buttons">
