--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <!-- Meta Data -->
     <meta name="theme-color" content="#98ff98">
-    <meta content="https://i.imgur.com/VH7Ieuf.png" property="og:image" />
+    <meta content="" property="og:image" />
     <link rel="icon" type="image/x-icon" href="https://github.com/Afraid4Life/Afraid4Life.github.io/blob/master/pORFPMW4_400x400.jpg">
     <meta content="Cube Countdown" property="og:title" />
 
@@ -51,18 +51,17 @@ var seconds = 30
 var distance = countDownDate.getTime() - now;
 while (distance < 0) {
     countDownDate.setSeconds(countDownDate.getSeconds() + minutes*60+seconds)
-    console.log("TEST")
  
     distance = countDownDate - now;
 }
  
-// Update the count down every 1 second
+
 var x = setInterval(function() {
  
-    // Get todays date and time
+
     var now = new Date().getTime();
    
-    // Find the distance between now and the count down date
+
     var distance = countDownDate - now;
    
     // Time calculations for days, hours, minutes and seconds
@@ -71,7 +70,7 @@ var x = setInterval(function() {
     var seconds = Math.floor((distance % (1000 * 60)) / 1000);
    
     // Output the result in an element with id="demo"
-    document.getElementById("countdown").innerHTML = hours + "h "
+    document.getElementById("countdown").innerHTML = <font size ="24">hours + "h "
     + minutes + "m " + seconds + "s ";
  
     console.log(distance)
@@ -90,7 +89,7 @@ var x = setInterval(function() {
   </head>
   <body>
     <div class="fullscreen">
-      <div data-jarallax data-speed="0.25" class="jarallax background" style="background-image: url('assets/images/bg1.gif');"></div>
+      <div data-jarallax data-speed="0.25" class="jarallax background" style="background-image: url('');"></div>
       <script type="text/javascript">
     var images = [''];
     //document.getElementsByClassName('background')[0].style.backgroundImage = 'url(' + images[Math.floor(Math.random() * images.length)] + ')';
@@ -120,7 +119,7 @@ var x = setInterval(function() {
       </div>
   
         <div class="box-container primary row">
-        <div class="one-full column"><h1 style="width: 100%;text-align: center"><i class="twa twa-pencil2"></i>Current Cube Map</h1></div>
+        <div class="one-full column"><h1 style="width: 100%;text-align: center"><i class="twa twa-pencil2"></i>Cube location</h1></div>
         <div class="one-full column">
           <a href="https://github.com/Afraid4Life/Afraid4Life.github.io/blob/master/Map.png" target="_blank"><img src="/blob/master/Map.png" style='height: 100%; width: 100%; object-fit: contain; text-align: center'/></>
         </div>
