--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ var x = setInterval(function() {
     var seconds = Math.floor((distance % (1000 * 60)) / 1000);
    
     // Output the result in an element with id="demo"
-    document.getElementById("countdown").innerHTML = <font size ="24">hours + "h "
+    document.getElementById("countdown").innerHTML = hours + "h "
     + minutes + "m " + seconds + "s ";
  
     console.log(distance)
