--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@ while (distance < 0) {
     countDownDate.setSeconds(countDownDate.getSeconds() + minutes*60+seconds)
  
     distance = countDownDate - now;
+  <disctance.FontSize ="24">
 }
  
 
