--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ var x = setInterval(function() {
       <div class="center-object">
         <section class="me">
           <h1 class="title" style="width: 100%;text-align: center">Time until cube moves:</h1>
-          <span class="undertitle" style="width: 100%;text-align: center" id="countdown"><font size = "24"></span>
+          <h1 class="title" style="width: 100%;text-align: center" id="countdown"></h1>
         </section>
         <div class="buttons">
           <a </a>
