--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@ var x = setInterval(function() {
     // Output the result in an element with id="demo"
     document.getElementById("countdown").innerHTML = hours + "h "
     + minutes + "m " + seconds + "s ";
+    document.getElementById("countdown").innerHTML = "Cube is not moving!";
     console.log(distance)
  
     if (distance < 0) {
