--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@ var x = setInterval(function() {
     var seconds = Math.floor((distance % (1000 * 60)) / 1000);
    
     // Output the result in an element with id="demo"
-    document.getElementById("countdown").innerHTML = hours + "h "
-    + minutes + "m " + seconds + "s ";
+    //document.getElementById("countdown").innerHTML = hours + "h "
+   // + minutes + "m " + seconds + "s ";
     document.getElementById("countdown").innerHTML = "Cube is not moving!";
     console.log(distance)
  
