--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ var x = setInterval(function() {
       <div class="center-object">
         <section class="me">
           <h1 class="title" style="width: 100%;text-align: center">Time until cube moves:</h1>
-          <h1 class="undertitle" style="width: 100%;text-align: center" id="countdown"></h1>
+          <h1 class="undertitle" style="width: 100%;text-align: center" id="countdown"><Font size = "32"></h1>
         </section>
         <div class="buttons">
           <a </a>
