--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ var x = setInterval(function() {
       <div class="center-object">
         <section class="me">
           <h1 class="title" style="width: 100%;text-align: center">Time until cube moves:</h1>
-          <h1 class="undertitle" style="width: 100%;text-align: center" id="countdown"><Font size = "32"></h1>
+          <h1 class="undertitle" style="width: 100%;text-align: center" id="countdown"><Font-size = "32"></h1>
         </section>
         <div class="buttons">
           <a </a>
@@ -119,7 +119,7 @@ var x = setInterval(function() {
       </div>
   
         <div class="box-container primary row">
-        <div class="one-full column"><h1 style="width: 100%;text-align: center"><i class="twa twa-pencil2"></i>Cube location</h1></div>
+        <div class="one-full column"><h1 style="width: 100%;text-align: center"><Font-size = "24"><i class="twa twa-pencil2"></i>Cube location</h1></div>
         <div class="one-full column">
           <a href="https://github.com/Afraid4Life/Afraid4Life.github.io/blob/master/Map.png" target="_blank"><img src="/blob/master/Map.png" style='height: 100%; width: 100%; object-fit: contain; text-align: center'/></>
         </div>
