--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@ var x = setInterval(function() {
         <div class="one-full column"><h1 style="width: 100%;text-align: center"><i class="twa twa-pencil2"></i></h1></div>
         <div class="one-full column">
         <!--a href="" target="_blank"><img src="" style='height: 100%; width: 100%; object-fit: contain; text-align: center'/></-->
+    <h1 class="undertitle" style="width: 100%;text-align: center" Current Location: Just above salty springs></h1>
         </div>
       </div>
   </section>
