--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ var x = setInterval(function() {
         <div class="one-full column"><h1 style="width: 100%;text-align: center"><i class="twa twa-pencil2"></i></h1></div>
         <div class="one-full column">
         <!--a href="" target="_blank"><img src="" style='height: 100%; width: 100%; object-fit: contain; text-align: center'/></-->
-        <div class="one-full column"><h1 style="width: 100%;text-align: center"><i class="twa twa-pencil2"></i>Current Location: Right above the Salty Springs tall mountain and dusty's mountain to the west of it.</h1></div>
+        <div class="one-full column"><h1 style="width: 100%;text-align: center"><i class="twa twa-pencil2"></i>Current Location: West of Dusty Divot</h1></div>
         </div>
       </div>
   </section>
