--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@ var x = setInterval(function() {
         <div class="one-full column">
         <!--a href="" target="_blank"><img src="" style='height: 100%; width: 100%; object-fit: contain; text-align: center'/></-->
         <div class="one-full column"><h1 style="width: 100%;text-align: center"><i class="twa twa-pencil2"></i>Current Location: West of Dusty Divot.</h1></div>
+           <div class="one-full column"><h1 style="width: 100%;text-align: center"><i class="twa twa-pencil2"></i>Status:\n Just spawned a low gravity field and now printing rune #3.</h1></div>
         </div>
       </div>
   </section>
