--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@ var x = setInterval(function() {
         <div class="one-full column"><h1 style="width: 100%;text-align: center"><i class="twa twa-pencil2"></i>Current Location: West of Dusty Divot.</h1></div>
            <div class="one-full column"><h1 style="width: 100%;text-align: center"><i class="twa twa-pencil2"></i>Status:</h1></div>
               <div class="one-full column"><h1 style="width: 100%;text-align: center"><i class="twa twa-pencil2"></i>Just spawned the low gravity "dome" and now printing rune #3</h1></div>
+                <div class="one-full column"><h1 style="width: 100%;text-align: center"><i class="twa twa-pencil2"></i>Made by: @AfraidFnbr</h1></div>
         </div>
       </div>
   </section>
