--- a/index.html
+++ b/index.html
@@ -126,6 +126,13 @@ var x = setInterval(function() {
            <div class="one-full column"><h1 style="width: 100%;text-align: center"><i class="twa twa-pencil2"></i>Status:</h1></div>
               <div class="one-full column"><h1 style="width: 100%;text-align: center"><i class="twa twa-pencil2"></i>Just spawned the low gravity "dome" and now printing rune #3</h1></div>
                 <div class="one-full column"><h1 style="width: 100%;text-align: center"><i class="twa twa-pencil2"></i>Twitter: @AfraidFnbr</h1></div>
+          <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({
+          google_ad_client: "ca-pub-1094117634634231",
+          enable_page_level_ads: true
+     });
+</script>
         </div>
       </div>
   </section>
