--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@ while (distance < 0) {
 
 var x = setInterval(function() {
  
-
+ document.getElementById("countdown").innerHTML = "Loading...";
     var now = new Date().getTime();
    
 
     var distance = countDownDate - now;
-   
+
     // Time calculations for days, hours, minutes and seconds
     var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
     var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
