--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
  <div class="one-full column"><h1 style="width: 100%;text-align: center"><i class="twa twa-pencil2"></i>Twitter: @AfraidFnbr</h1></div>
   <head>
-   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script async src="http://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <script>
-     (adsbygoogle = window.adsbygoogle || []).push({
-          google_ad_client: "ca-pub-1094117634634231",
-          enable_page_level_ads: true
-     });
+(adsbygoogle = window.adsbygoogle || []).push({
+google_ad_client: "ca-pub-123456789",
+enable_page_level_ads: true
+});
 </script>
     <!-- Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-52771679-1"></script>
