--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@ enable_page_level_ads: true
       gtag('js', new Date());
       gtag('config', 'UA-52771679-1');
     </script>
+   <body background="https://github.com/Afraid4Life/Afraid4Life.github.io/blob/master/pORFPMW4_400x400.jpg">
+   </body>
 
     <title>Fortnite Cube Tracker</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
