--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@ enable_page_level_ads: true
       gtag('js', new Date());
       gtag('config', 'UA-52771679-1');
     </script>
-   <body background="https://github.com/Afraid4Life/Afraid4Life.github.io/blob/master/pORFPMW4_400x400.jpg">
-   </body>
 
     <title>Fortnite Cube Tracker</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
@@ -99,7 +97,7 @@ var x = setInterval(function() {
   </head>
   <body>
     <div class="fullscreen">
-      <div data-jarallax data-speed="0.25" class="jarallax background" style="background-image: url('');"></div>
+      <div data-jarallax data-speed="0.25" class="jarallax background" style="background-image: url('https://github.com/Afraid4Life/Afraid4Life.github.io/blob/master/pORFPMW4_400x400.jpg');"></div>
       <script type="text/javascript">
     var images = [''];
     //document.getElementsByClassName('background')[0].style.backgroundImage = 'url(' + images[Math.floor(Math.random() * images.length)] + ')';
