--- a/index.html
+++ b/index.html
@@ -66,7 +66,6 @@ while (distance < 0) {
 
 var x = setInterval(function() {
  
- document.getElementById("countdown").innerHTML = "Loading...";
     var now = new Date().getTime();
    
 
@@ -77,10 +76,10 @@ var x = setInterval(function() {
     var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
     var seconds = Math.floor((distance % (1000 * 60)) / 1000);
    
-    // Output the result in an element with id="demo"
-    //document.getElementById("countdown").innerHTML = hours + "h "
-   // + minutes + "m " + seconds + "s ";
-    document.getElementById("countdown").innerHTML = "Cube is not moving!";
+     //Output the result in an element with id="demo"
+    document.getElementById("countdown").innerHTML = hours + "h "
+    + minutes + "m " + seconds + "s ";
+    //document.getElementById("countdown").innerHTML = "Cube is not moving!";
     console.log(distance)
  
     if (distance < 0) {
