--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ var x = setInterval(function() {
         <!--a href="" target="_blank"><img src="" style='height: 100%; width: 100%; object-fit: contain; text-align: center'/></-->
         <div class="one-full column"><h1 style="width: 100%;text-align: center"><i class="twa twa-pencil2"></i>Current Location: West of Dusty Divot.</h1></div>
            <div class="one-full column"><h1 style="width: 100%;text-align: center"><i class="twa twa-pencil2"></i>Status:</h1></div>
-              <div class="one-full column"><h1 style="width: 100%;text-align: center"><i class="twa twa-pencil2"></i>Just spawned the low gravity "dome" and now printing rune #3</h1></div>
+              <div class="one-full column"><h1 style="width: 100%;text-align: center"><i class="twa twa-pencil2"></i>Just printed Rune #3</h1></div>
         </div>
       </div>
   </section>
