--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@ var x = setInterval(function() {
         <div class="one-full column"><h1 style="width: 100%;text-align: center"><i class="twa twa-pencil2"></i></h1></div>
         <div class="one-full column">
         <!--a href="" target="_blank"><img src="" style='height: 100%; width: 100%; object-fit: contain; text-align: center'/></-->
-        <div class="one-full column"><h1 style="width: 100%;text-align: center"><i class="twa twa-pencil2"></i>Current Location: South of dusty divot</h1></div>
+        <div class="one-full column"><h1 style="width: 100%;text-align: center"><i class="twa twa-pencil2"></i>Current Location: Southeast of dusty divot</h1></div>
            <div class="one-full column"><h1 style="width: 100%;text-align: center"><i class="twa twa-pencil2"></i>Status:</h1></div>
-              <div class="one-full column"><h1 style="width: 100%;text-align: center"><i class="twa twa-pencil2"></i>Just printed Rune #3</h1></div>
+              <div class="one-full column"><h1 style="width: 100%;text-align: center"><i class="twa twa-pencil2"></i>Nothing important right now!</h1></div>
         </div>
       </div>
   </section>
