--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <html>
+ <h1 style="color:#00FF00;">WARNING: THERE IS SOME DELAY WHEN THE CUBE MOVES...</h1>
+
  <div class="one-full column"><h1 style="width: 100%;text-align: center"><i class="twa twa-pencil2"></i>Twitter: @AfraidFnbr</h1></div>
   <head>
 <script async src="http://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
