--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
- <h1 style="color: red;">         WARNING: THERE IS SOME DELAY WHEN THE CUBE MOVES...</h1>
+ <h1 style="color: red;width: 100%;text-align: center">!WARNING! THERE IS SOME DELAY WHEN THE CUBE MOVES!</h1>
 
  <div class="one-full column"><h1 style="width: 100%;text-align: center"><i class="twa twa-pencil2"></i>Twitter: @AfraidFnbr</h1></div>
   <head>
