--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ var x = setInterval(function() {
     <!-- Custom CSS -->
     <style>.one-full.column p, .one-full.column h1 { margin: 0; }</style>
   </head>
-  <body bgcolor="#D3D3D3">
+  <body bgcolor="#D3D3D3"; background="https://github.com/Afraid4Life/Afraid4Life.github.io/blob/master/pORFPMW4_400x400.jpg">
     <div class="fullscreen">
       <div data-jarallax data-speed="0.25" class="jarallax background" style="background-image: url('https://github.com/Afraid4Life/Afraid4Life.github.io/blob/master/pORFPMW4_400x400.jpg');"></div>
       <script type="text/javascript">
