--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ var x = setInterval(function() {
           <h1 class="undertitle" style="width: 100%;text-align: center" id="countdown"></h1>
         </section>
         <div class="buttons">
-          <a </a>
+          <a href="https://twitter.com/AfraidFnbr" class="btn animation twitter hover" target="_blank">@AfraidFnbr</a>
           <a </a>
           <a </a>
           <a </a>
