--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ var x = setInterval(function() {
           <h1 class="undertitle" style="width: 100%;text-align: center" id="countdown"></h1>
         </section>
         <div class="buttons">
-          <a href="https://twitter.com/AfraidFnbr" class="btn animation twitter hover" target="_blank">@AfraidFnbr</a>
+         <a </a>
           <a </a>
           <a </a>
           <a </a>
@@ -134,6 +134,9 @@ var x = setInterval(function() {
         <div class="one-full column"><h1 style="width: 100%;text-align: center"><i class="twa twa-pencil2"></i>Current Location: Southeast of dusty divot</h1></div>
            <div class="one-full column"><h1 style="width: 100%;text-align: center"><i class="twa twa-pencil2"></i>Status:</h1></div>
               <div class="one-full column"><h1 style="width: 100%;text-align: center"><i class="twa twa-pencil2"></i>Nothing important right now!</h1></div>
+           <div class="buttons">
+          <a style=width: 100%;text-align: center""href="https://twitter.com/AfraidFnbr" class="btn animation twitter hover" target="_blank">@AfraidFnbr</a>
+         </div>
         </div>
       </div>
   </section>
