--- a/index.html
+++ b/index.html
@@ -134,9 +134,7 @@ var x = setInterval(function() {
         <div class="one-full column"><h1 style="width: 100%;text-align: center"><i class="twa twa-pencil2"></i>Current Location: Southeast of dusty divot</h1></div>
            <div class="one-full column"><h1 style="width: 100%;text-align: center"><i class="twa twa-pencil2"></i>Status:</h1></div>
               <div class="one-full column"><h1 style="width: 100%;text-align: center"><i class="twa twa-pencil2"></i>Nothing important right now!</h1></div>
-           <div class="buttons">
-          <a style=width: 100%;text-align: center";"href="https://twitter.com/AfraidFnbr" class="btn animation twitter hover" target="_blank">@AfraidFnbr</a>
-         </div>
+         <a href="https://twitter.com/AfraidFnbr"><button autofocus="autofocus">Twitter</button></a>
         </div>
       </div>
   </section>
