--- a/index.html
+++ b/index.html
@@ -134,7 +134,8 @@ var x = setInterval(function() {
         <div class="one-full column"><h1 style="width: 100%;text-align: center"><i class="twa twa-pencil2"></i>Current Location: Southeast of dusty divot</h1></div>
            <div class="one-full column"><h1 style="width: 100%;text-align: center"><i class="twa twa-pencil2"></i>Status:</h1></div>
               <div class="one-full column"><h1 style="width: 100%;text-align: center"><i class="twa twa-pencil2"></i>Nothing important right now!</h1></div>
-         <a href="https://twitter.com/AfraidFnbr"><button autofocus="autofocus">Twitter</button></a>
+       <div style='height: 100%; width: 100%; object-fit: contain; text-align: center'> <a href="https://twitter.com/AfraidFnbr"><button autofocus="autofocus">Twitter</button></a>
+         </div>
         </div>
       </div>
   </section>
