--- a/MainPage.html
+++ b/MainPage.html
@@ -1,1 +1,3 @@
 <h1>In Progress</h1>
+<div style='height: 100%; width: 100%; object-fit: contain; text-align: center'> <a href="https://afraid4life.github.io/"><button autofocus="autofocus">Back to home</button></a>
+</div>
