--- a/MainPage.html
+++ b/MainPage.html
@@ -1,3 +1,43 @@
 <h1>In Progress</h1>
 <div style='height: 100%; width: 100%; object-fit: contain; text-align: center'> <a href="https://afraid4life.github.io/"><button autofocus="autofocus">Fortnite Cube Tracker</button></a>
 </div>
+<head>
+    <title>Fortnite Stats Tracker</title>
+    <!-- Meta tags -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Style Sheets -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Do+Hyeon" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
+    <link href="css/style.css" rel="stylesheet">
+    <!-- Scripts -->
+    <script src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="config/config-file.js"></script>
+    <script src="js/app.js"></script>
+</head>
+
+<body>
+
+    <header id="header" class="container">
+        <h1>Fortnite Tracker</h1>
+    </header>
+
+    <section class="input-section container">
+        <div class="input-fields">
+
+            <article class="username-section">
+                <h3>Enter Your Username</h3>
+                <div class="search-section">
+                    <input id="userName" type="text" placeholder="Your username here" class="form-control">
+                    <a href="#" id="searchStats" class="search-btn">Search <i class="fas fa-search"></i></a>
+                </div>
+            </article>
+
+        </div>
+    </section>
+
+    <section class="output-section container">
+        <!--results will display here-->
+    </section>
+
+</body>
