--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@ var x = setInterval(function() {
               <div class="one-full column"><h1 style="width: 100%;text-align: center"><i class="twa twa-pencil2"></i>Nothing important right now!</h1></div>
          <div style='height: 100%; width: 100%; object-fit: contain; text-align: center'> <a href="https://twitter.com/AfraidFnbr"><button autofocus="autofocus">Twitter</button></a>
           <div style='height: 100%; width: 100%; object-fit: contain; text-align: center'> <a href="https://afraid4life.github.io/MainPage.html"><button autofocus="autofocus">Back to home</button></a>
+           <img src="https://pbs.twimg.com/media/DmbSFpTW0AIr7Aj.jpg"/>
          </div>
         </div>
       </div>
