--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ var x = setInterval(function() {
         <div class="one-full column"><h1 style="width: 100%;text-align: center"><i class="twa twa-pencil2"></i>Current Location: Southeast of dusty divot</h1></div>
            <div class="one-full column"><h1 style="width: 100%;text-align: center"><i class="twa twa-pencil2"></i>Status:</h1></div>
               <div class="one-full column"><h1 style="width: 100%;text-align: center"><i class="twa twa-pencil2"></i>Nothing important right now!</h1></div>
-           <img src="https://pbs.twimg.com/media/DmbSFpTW0AIr7Aj.jpg"/>
+           <img src="https://pbs.twimg.com/media/DmbSFpTW0AIr7Aj.jpg"/> <img src="https://pbs.twimg.com/media/DmcgYzqUcAAJzmM.png"/>
          </div>
         </div>
       </div>
