--- a/MainPage.html
+++ b/MainPage.html
@@ -1,5 +1,5 @@
 <title>Afraid4Life Home Page</title>
 <h1>In Progress</h1>
-<div style='height: 100%; width: 100%; object-fit: contain; text-align: center'> <a href="https://afraid4life.github.io/"><button autofocus="autofocus">Fortnite Cube Tracker</button></a>
+<div style='height: 100%; width: 100%; object-fit: contain; text-align: center'> <a href="https://afraid4life.github.io/"><button autofocus="autofocus">Fortnite Cube Tracker</button></a> <div style='height: 100%; width: 100%; object-fit: contain; text-align: center'> <a href="https://discord.gg/Qx29FUy"><button autofocus="autofocus">Afraid Leak's discord</button></a>
 </div>
 
