--- a/MainPage.html
+++ b/MainPage.html
@@ -1,5 +1,6 @@
 <title>Afraid4Life Home Page</title>
- <body background="https://vignette.wikia.nocookie.net/fortnitemap/images/8/81/Salty.jpg">
+ <body background="http://www.techpowerup.com/img/YxOvTEArWa1tNuuy.jpg">
+  <link rel="icon" href="https://pbs.twimg.com/profile_images/1034941274707509248/pORFPMW4.jpg">
 <h1>Websites to go to:</h1>
 <div style='height: 100%; width: 100%; object-fit: contain; text-align: center'> <a href="https://afraid4life.github.io/"><button autofocus="autofocus">Fortnite Cube Tracker</button></a> <div style='height: 100%; width: 100%; object-fit: contain; text-align: center'> <a href="https://discord.gg/Qx29FUy"><button autofocus="autofocus">Afraid Leak's discord</button></a>
 </div>
