--- a/index.html
+++ b/index.html
@@ -1,145 +1,1 @@
-<html>
- <h1 style="color: red;width: 100%;text-align: center">WARNING: THERE IS SOME DELAY WHEN THE CUBE MOVES!</h1>
-  <div style='height: 100%; width: 100%; object-fit: contain; text-align: center'> <a href="https://twitter.com/AfraidFnbr"><button autofocus="autofocus">Twitter</button></a>
-          <div style='height: 100%; width: 100%; object-fit: contain; text-align: center'> <a href="https://afraid4life.github.io/MainPage.html"><button autofocus="autofocus">Back to home</button></a>
-
- <div class="one-full column"><h1 style="color: #00BFFF;width: 100%;text-align: center"><i class="twa twa-pencil2"></i>🐦Twitter: @AfraidFnbr🐦</h1></div>
-  <head>
-<script async src="http://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-(adsbygoogle = window.adsbygoogle || []).push({
-google_ad_client: "ca-pub-123456789",
-enable_page_level_ads: true
-});
-</script>
-    <!-- Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-52771679-1"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'UA-52771679-1');
-    </script>
-
-    <title>Fortnite Cube Tracker</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
-
-    <!-- Meta Data -->
-    <meta name="theme-color" content="#98ff98">
-    <meta content="" property="og:image" />
-    <link rel="icon" type="image/x-icon" href="https://github.com/Afraid4Life/Afraid4Life.github.io/blob/master/pORFPMW4_400x400.jpg">
-    <meta content="Cube Countdown" property="og:title" />
-
-    <meta content="" property="og:description" />
-    <meta content="" name="description" />
-
-    <!-- CSS -->
-    <link href="assets/css/modesta.css" type="text/css" rel="stylesheet"> <!-- uses ModestaCSS from https://github.com/AlexFlipnote/ModestaCSS -->
-
-    <!-- JavaScript -->
-    <script src="assets/js/smoothscroll.min.js" type="text/javascript" charset="utf-8"></script>
-    <script src="assets/js/jarallax.min.js" type="text/javascript" charset="utf-8"></script>
-    <script src="assets/js/main.js" type="text/javascript" charset="utf-8"></script>
-    <script>
-function wait(ms) {
-    var d = new Date();
-    var d2 = null;
-    do { d2 = new Date(); }
-    while(d2-d < ms);
-}
- 
-// Set the date we're counting down to
- 
-var countDownDate = new Date("Sep 5, 2018 17:13:33 EDT")
- 
-// Get todays date and time
-var now = new Date().getTime();
-      
-var minutes = 52
-var seconds = 30
-   
-// Find the distance between now and the count down date
-var distance = countDownDate.getTime() - now;
-while (distance < 0) {
-    countDownDate.setSeconds(countDownDate.getSeconds() + minutes*60+seconds)
- 
-    distance = countDownDate - now;
-}
- 
-
-var x = setInterval(function() {
- 
-    var now = new Date().getTime();
-   
-
-    var distance = countDownDate - now;
-
-    // Time calculations for days, hours, minutes and seconds
-    var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-    var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-    var seconds = Math.floor((distance % (1000 * 60)) / 1000);
-   
-     //Output the result in an element with id="demo"
-    document.getElementById("countdown").innerHTML = hours + "h "
-    + minutes + "m " + seconds + "s ";
-    //document.getElementById("countdown").innerHTML = "Cube is not moving!";
-    console.log(distance)
- 
-    if (distance < 0) {
-    document.getElementById("countdown").innerHTML = "Cube is now moving!";
-    }
-    if (distance < -19000) {
-    countDownDate.setSeconds(countDownDate.getSeconds() + minutes*60+seconds);
-    }
-}, 1000);
-</script>
-
-    <!-- Custom CSS -->
-    <style>.one-full.column p, .one-full.column h1 { margin: 0; }</style>
-  </head>
-  <body background="https://images8.alphacoders.com/903/thumb-1920-903580.png">
-    <div class="fullscreen">
-      <div data-jarallax data-speed="0.25" class="jarallax background" style="background-image: url('https://github.com/Afraid4Life/Afraid4Life.github.io/blob/master/pORFPMW4_400x400.jpg');"></div>
-      <script type="text/javascript">
-    var images = [''];
-    //document.getElementsByClassName('background')[0].style.backgroundImage = 'url(' + images[Math.floor(Math.random() * images.length)] + ')';
-  </script>
-      <div class="center-object">
-        <section class="me">
-          <h1 class="title" style="width: 100%;text-align: center">Time until cube moves:</h1>
-          <h1 class="undertitle" style="width: 100%;text-align: center" id="countdown"></h1>
-        </section>
-        <div class="buttons">
-         <a </a>
-          <a </a>
-          <a </a>
-          <a </a>
-        </div>
-      </div>
-              <a href="#information"><div id="fade" class="arrow bounce"></div></a>
-    </div>
-
-    <section class="container" id="information">
-      <div class="box-container primary row">
-        <div class="one-full column"><h1 style="width: 100%;text-align: center"><i class="twa twa-pencil2"></i></h1></div>
-        <div class="one-full column">
-          <p>
-          </p>
-        </div>
-      </div>
-  
-        <div class="box-container primary row">
-        <div class="one-full column"><h1 style="width: 100%;text-align: center"><i class="twa twa-pencil2"></i></h1></div>
-        <div class="one-full column">
-        <!--a href="" target="_blank"><img src="" style='height: 100%; width: 100%; object-fit: contain; text-align: center'/></-->
-        <div class="one-full column"><h1 style="width: 100%;text-align: center"><i class="twa twa-pencil2"></i>Current Location: Southeast of dusty divot</h1></div>
-           <div class="one-full column"><h1 style="width: 100%;text-align: center"><i class="twa twa-pencil2"></i>Status:</h1></div>
-              <div class="one-full column"><h1 style="width: 100%;text-align: center"><i class="twa twa-pencil2"></i>Nothing important right now!</h1></div>
-           <img src="https://pbs.twimg.com/media/DmbSFpTW0AIr7Aj.jpg"/> <img src="https://pbs.twimg.com/media/DmcgYzqUcAAJzmM.png"/>
-         </div>
-        </div>
-      </div>
-  </section>
-  </body>
-</html>
+<div data-type="countdown" data-id="746057" class="tickcounter" style="width: 100%; position: relative; padding-bottom: 25%"><a href="//www.tickcounter.com/countdown/746057/my-countdown" title="My countdown">My countdown</a><a href="//www.tickcounter.com/" title="Countdown">Countdown</a></div><script>(function(d, s, id) { var js, pjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) return; js = d.createElement(s); js.id = id; js.src = "//www.tickcounter.com/static/js/loader.js"; pjs.parentNode.insertBefore(js, pjs); }(document, "script", "tickcounter-sdk"));</script>
