--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
   <body>
-    <a href="Webbed V2.zip" download>Download Picture</a>
-    download update
-    <span class="normal">(150.3 MB )</span>
+    <a href="Webbed V2.zip" download>Download Update!</a>
+    
+    <span class="normal">(466 KB)</span>
     </a>
   </body>
 </html>
