--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <html>
   <body>
-    <a href="Webbed V2.zip" download>Download Update!</a>
-    
-    <span class="normal">(466 KB)</span>
+    <a href="Webbed V2.zip" download>Download Update! (466 KB)</a>
     </a>
   </body>
 </html>
