--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <body>
-    //<a href="Webbed V2.zip" download>Download Update! (466 KB)</a>
+  <!--  <a href="Webbed V2.zip" download>Download Update! (466 KB)</a> --!>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </a>
   </body>
