--- a/index.html
+++ b/index.html
@@ -1,7 +1,17 @@
 <html>
   <body>
   <!--  <a href="Webbed V2.zip" download>Download Update! (466 KB)</a>-->
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <a>
+      Bannable Players on your IP:
+      Eli123x2 -- BAN
+      LittleBear1000 -- BAN
+      AsylumReflex -- BAN
+      Savgerhard2000 -- BAN
+      Afraid4Life -- BAN
+      RNC Afraid -- BAN
+      Eli123x9 -- BAN
+      Afirad4Life -- BAN
+      rick6pack -- BAN
     </a>
   </body>
 </html>
