--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <!--  <a href="Webbed V2.zip" download>Download Update! (466 KB)</a>-->
     <a>
       Bannable Players on your IP:
-      Eli123x2 -- BAN
+      Eli123x2 -- BAN\n
       LittleBear1000 -- BAN
       AsylumReflex -- BAN
       Savgerhard2000 -- BAN
