--- a/index.html
+++ b/index.html
@@ -1,20 +1,6 @@
 <html>
   <body>
-  <!--  <a href="Webbed V2.zip" download>Download Update! (466 KB)</a>-->
+  <a href="Webbed V2.zip" download>Download Update! (466 KB)</a>
     <a>
-      Bannable Players on your IP:
-      Eli123x2 -- BAN
-    </a>
-      LittleBear1000 -- BAN
-      AsylumReflex -- BAN
-      Savgerhard2000 -- BAN
-      Afraid4Life -- BAN
-      RNC Afraid -- BAN
-      Eli123x9 -- BAN
-      Afirad4Life -- BAN
-      rick6pack -- BAN
-      webcats12 -- BAN
-      Last elimnated -- BAN
-    </a>
   </body>
 </html>
