--- a/index.html
+++ b/index.html
@@ -1,6 +1,1 @@
-<html>
-  <body>
-  <a href="Webbed V2.zip" download>Download Update! (466 KB)</a>
-    <a>
-  </body>
-</html>
+<iframe src="https://unbelievaboat.com/leaderboard/650824236432228363/widget" width="450" height="500" style="border: 0;"></iframe>
