--- a/MainPage.html
+++ b/MainPage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>HTML Video embed</title>
+      <title>VALORANT KEYS</title>
       <h6>LIST OF 60 FREE VALORANT KEYS</h6>
       <a href="https://www.twitch.tv/inventory">
    </head>
