--- a/MainPage.html
+++ b/MainPage.html
@@ -3,7 +3,7 @@
    <head>
       <title>VALORANT KEYS</title>
       <h1>LIST OF 60 FREE VALORANT KEYS</h1>
-      <a href="https://www.twitch.tv/inventory">
+      <a href="https://www.twitch.tv/inventory">https://www.twitch.tv/inventory</a>
    </head>
    <body>
       <br />
