--- a/index.html
+++ b/index.html
@@ -1,2 +1,13 @@
-<iframe src="https://unbelievaboat.com/leaderboard/650824236432228363/widget" width="1500" height="720" style="border: 0;"></iframe>
-<iframe src="https://discordapp.com/widget?id=650824236432228363&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
+<!DOCTYPE html>
+<html>
+   <head>
+      <title>VALORANT KEYS</title>
+      <h1>LIST OF 60 FREE VALORANT KEYS</h1>
+      <a href="https://www.twitch.tv/inventory">https://www.twitch.tv/inventory</a>
+   </head>
+   <body>
+      <br />
+     <iframe width="1080" height="720" src="https://www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </iframe>
+   </body>
+</html>
