--- a/getfucked.html
+++ b/getfucked.html
@@ -1,3 +1,9 @@
+  <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <meta property="og:site_name" content="Nukers">
+    <meta property="og:description" content="We nuke servers. Come to us if you want someone gone.">
+    <meta property="og:title" content="Nukersite">
+    <meta property="og:type" content="website">
 <body>
   <h1>get fucked retard.</h1>
 </body>
